[package]
name = "time-scheduler-server"
description = "A server for the time-scheduler app"
version = "1.1.4"
edition = "2021"
license = "MIT"
authors = ["Dr-42"]
repository = "https://github.com/Dr-42/time-scheduler-server"

[dependencies]
axum = "0.8.1"
sha256 = "1.5.0"
rpassword = "7.3.1"
tokio = { version = "1.42.0", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
