[package]
name = "time-scheduler-server"
description = "A server for the time-scheduler app"
version = "1.1.6"
edition = "2021"
license = "MIT"
authors = ["Dr-42"]
repository = "https://github.com/Dr-42/time-scheduler-server"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
sha256 = "1.5.0"
rpassword = "7.3.1"
tokio = { version = "1.42.0", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rand = "0.8.5"
jsonwebtoken = "9.3.0"
indexmap = "2.7.1"
